--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 	"type": "module",
 	"dependencies": {
 		"@sveltejs/adapter-node": "^5.2.0",
+		"date-fns": "^3.6.0",
 		"kysely": "^0.27.4",
 		"kysely-ctl": "^0.8.10",
 		"lodash": "^4.17.21",
