--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"kysely-ctl": "^0.8.10",
 		"lodash": "^4.17.21",
 		"mysql2": "^3.10.2",
-		"sass": "^1.77.6"
+		"sass": "^1.77.6",
+		"url-join": "^5.0.0"
 	}
 }
