--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 	"type": "module",
 	"dependencies": {
 		"@sveltejs/adapter-node": "^5.2.0",
+		"bigger-picture": "^1.1.17",
 		"date-fns": "^3.6.0",
 		"kysely": "^0.27.4",
 		"kysely-ctl": "^0.8.10",
