--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
+		"@fortawesome/free-solid-svg-icons": "^6.5.2",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.1.1",
@@ -24,6 +25,7 @@
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
 		"svelte": "^4.2.7",
+		"svelte-fa": "^4.0.2",
 		"tailwindcss": "^3.4.4",
 		"vite": "^5.0.3",
 		"vitest": "^1.2.0"
