--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
 		"lodash": "^4.17.21",
 		"mysql2": "^3.10.2",
 		"sass": "^1.77.6",
-		"url-join": "^5.0.0"
+		"url-join": "^5.0.0",
+		"zod": "^3.23.8",
+		"zod-form-data": "^2.0.2"
 	}
 }
