--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"lodash": "^4.17.21",
 		"mysql2": "^3.10.2",
 		"sass": "^1.77.6",
+		"svelte-captcha-enhance": "^1.2.1",
 		"url-join": "^5.0.0",
 		"zod": "^3.23.8",
 		"zod-form-data": "^2.0.2"
