Verify captcha response via API

--- a/.env.example.env
+++ b/.env.example.env
@@ -1,3 +1,10 @@
 VITE_PORT=
 VITE_DB_CONNECTION_STRING=
 VITE_GOOGLE_RECAPTCHA_SITE_KEY=
+VITE_GOOGLE_RECAPTCHA_SECRET_KEY=
+VITE_SMTP_HOST=
+VITE_SMTP_PORT=
+VITE_SMTP_USERNAME=
+VITE_SMTP_PASSWORD=
+VITE_DOMAIN=
+VITE_FROM_EMAIL=
