--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 	"type": "module",
 	"dependencies": {
 		"@sveltejs/adapter-node": "^5.2.0",
+		"axios": "^1.7.2",
 		"bigger-picture": "^1.1.17",
 		"date-fns": "^3.6.0",
 		"embla-carousel-svelte": "^8.1.6",
