Add More Info form; env var controls use of captcha

--- a/.env.example.env
+++ b/.env.example.env
@@ -1,6 +1,8 @@
 VITE_HOST=
 VITE_PORT=
 VITE_DB_CONNECTION_STRING=
+# Use 'yes' or anything else for no
+VITE_USE_CAPTCHA=no
 VITE_GOOGLE_RECAPTCHA_SITE_KEY=
 VITE_GOOGLE_RECAPTCHA_SECRET_KEY=
 VITE_SMTP_HOST=
