Allow sending emails from sendmail

--- a/.env.example.env
+++ b/.env.example.env
@@ -5,10 +5,14 @@ VITE_DB_CONNECTION_STRING=
 VITE_USE_CAPTCHA=no
 VITE_GOOGLE_RECAPTCHA_SITE_KEY=
 VITE_GOOGLE_RECAPTCHA_SECRET_KEY=
+# Use 'yes' or anything else for no
+VITE_USE_SENDMAIL=
 VITE_SMTP_HOST=
 VITE_SMTP_PORT=
 VITE_SMTP_USERNAME=
 VITE_SMTP_PASSWORD=
 VITE_DOMAIN=
-VITE_FROM_EMAIL=
+VITE_FROM_EMAIL_ADDRESS=
+# Be sure to quote the value if there are spaces
+VITE_FROM_EMAIL_NAME=""
 VITE_DEFAULT_DB_SELECT_LIMIT=100
