Add commercial listings page. Hide subdivision images if they are missing.

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ node_modules
 .vercel
 /.svelte-kit
 /build
+static/
 
 # OS
 .DS_Store
@@ -24,3 +25,4 @@ vite.config.ts.timestamp-*
 docker/volumes/
 
 old_site/
+
