Add storybook and a few initial stories

--- a/package.json
+++ b/package.json
@@ -1,52 +1,70 @@
 {
-	"name": "outerbankshome.com",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview",
-		"test": "vitest",
-		"lint": "prettier --check . && eslint .",
-		"format": "prettier --write . src"
-	},
-	"devDependencies": {
-		"@fortawesome/free-solid-svg-icons": "^6.5.2",
-		"@sveltejs/adapter-auto": "^3.0.0",
-		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^3.1.1",
-		"@types/eslint": "^8.56.7",
-		"autoprefixer": "^10.4.19",
-		"eslint": "^9.0.0",
-		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.36.0",
-		"globals": "^15.0.0",
-		"postcss": "^8.4.39",
-		"prettier": "^3.1.1",
-		"prettier-plugin-svelte": "^3.1.2",
-		"svelte": "^4.2.7",
-		"svelte-fa": "^4.0.2",
-		"tailwindcss": "^3.4.4",
-		"vite": "^5.0.3",
-		"vitest": "^1.2.0"
-	},
-	"type": "module",
-	"dependencies": {
-		"@sveltejs/adapter-node": "^5.2.0",
-		"axios": "^1.7.2",
-		"bigger-picture": "^1.1.17",
-		"date-fns": "^3.6.0",
-		"embla-carousel-svelte": "^8.1.6",
-		"kysely": "^0.27.4",
-		"kysely-ctl": "^0.8.10",
-		"lodash": "^4.17.21",
-		"mysql2": "^3.10.2",
-		"nodemailer": "^6.9.14",
-		"sass": "^1.77.6",
-		"svelte-captcha-enhance": "^1.2.1",
-		"svelte-email": "^0.0.4",
-		"url-join": "^5.0.0",
-		"zod": "^3.23.8",
-		"zod-form-data": "^2.0.2"
-	}
+  "name": "outerbankshome.com",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "dev": "vite dev",
+    "build": "vite build",
+    "preview": "vite preview",
+    "test": "vitest",
+    "lint": "prettier --check . && eslint .",
+    "format": "prettier --write . src",
+    "storybook": "TZ=UTC storybook dev -p 8892 --host 0.0.0.0 --no-open",
+    "build-storybook": "storybook build"
+  },
+  "devDependencies": {
+    "@chromatic-com/storybook": "^1.9.0",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@storybook/addon-essentials": "^8.3.2",
+    "@storybook/addon-interactions": "^8.3.2",
+    "@storybook/addon-links": "^8.3.2",
+    "@storybook/addon-svelte-csf": "^4.1.7",
+    "@storybook/blocks": "^8.3.2",
+    "@storybook/svelte": "^8.3.2",
+    "@storybook/sveltekit": "^8.3.2",
+    "@storybook/test": "^8.3.2",
+    "@sveltejs/adapter-auto": "^3.0.0",
+    "@sveltejs/kit": "^2.0.0",
+    "@sveltejs/vite-plugin-svelte": "^3.1.1",
+    "@types/eslint": "^8.56.7",
+    "autoprefixer": "^10.4.19",
+    "eslint": "^9.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-storybook": "^0.8.0",
+    "eslint-plugin-svelte": "^2.36.0",
+    "globals": "^15.0.0",
+    "postcss": "^8.4.39",
+    "prettier": "^3.1.1",
+    "prettier-plugin-svelte": "^3.1.2",
+    "storybook": "^8.3.2",
+    "svelte": "^4.2.7",
+    "svelte-fa": "^4.0.2",
+    "tailwindcss": "^3.4.4",
+    "vite": "^5.0.3",
+    "vitest": "^1.2.0"
+  },
+  "type": "module",
+  "dependencies": {
+    "@sveltejs/adapter-node": "^5.2.0",
+    "axios": "^1.7.2",
+    "bigger-picture": "^1.1.17",
+    "date-fns": "^3.6.0",
+    "embla-carousel-svelte": "^8.1.6",
+    "kysely": "^0.27.4",
+    "kysely-ctl": "^0.8.10",
+    "lodash": "^4.17.21",
+    "mysql2": "^3.10.2",
+    "nodemailer": "^6.9.14",
+    "sass": "^1.77.6",
+    "svelte-captcha-enhance": "^1.2.1",
+    "svelte-email": "^0.0.4",
+    "url-join": "^5.0.0",
+    "zod": "^3.23.8",
+    "zod-form-data": "^2.0.2"
+  },
+  "eslintConfig": {
+    "extends": [
+      "plugin:storybook/recommended"
+    ]
+  }
 }
