Make prose dir configurable because it will be different between dev and prod

--- a/.env.example.env
+++ b/.env.example.env
@@ -16,3 +16,5 @@ VITE_FROM_EMAIL_ADDRESS=
 # Be sure to quote the value if there are spaces
 VITE_FROM_EMAIL_NAME=""
 VITE_DEFAULT_DB_SELECT_LIMIT=100
+VITE_GOOGLE_MAPS_API_KEY=
+VITE_PROSE_DIR_ABS_PATH=
